[gd_scene load_steps=21 format=2]

[ext_resource path="res://Player/spr_player.png" type="Texture" id=1]
[ext_resource path="res://Player/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Player/PlayerHurtbox.gd" type="Script" id=3]
[ext_resource path="res://Mobs/hit_flash_shader.tres" type="Material" id=4]
[ext_resource path="res://Player/Sounds/hitMedium.wav" type="AudioStream" id=5]
[ext_resource path="res://Player/Sounds/hitSmall.wav" type="AudioStream" id=6]
[ext_resource path="res://Player/Sounds/hitBig.wav" type="AudioStream" id=7]
[ext_resource path="res://Player/PlayerBuildRange.gd" type="Script" id=8]
[ext_resource path="res://Player/Sounds/footstep_1.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=9]
radius = 2.0
height = 3.5

[sub_resource type="Animation" id=10]
resource_name = "Dash"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "spawn_karate_effect"
}, {
"args": [  ],
"method": "spawn_karate_effect"
}, {
"args": [  ],
"method": "spawn_karate_effect"
}, {
"args": [  ],
"method": "spawn_karate_effect"
}, {
"args": [  ],
"method": "spawn_karate_effect"
}, {
"args": [  ],
"method": "spawn_karate_effect"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hat:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Jump"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.075, 0.15, 0.35, 0.425, 0.475, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, -3 ), Vector2( 0, -4 ), Vector2( 0, -3 ), Vector2( 0, -2 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hat:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.025, 0.075, 0.15, 0.35, 0.425, 0.475, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, -3 ), Vector2( 0, -4 ), Vector2( 0, -3 ), Vector2( 0, -2 ), Vector2( 0, -1 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hat:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hat:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.35, 0.45, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "footstep"
}, {
"args": [  ],
"method": "footstep"
} ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 3.0
height = 6.5

[sub_resource type="CapsuleShape2D" id=6]
radius = 6.0
height = 8.0

[sub_resource type="AudioStreamGenerator" id=7]

[sub_resource type="AudioStreamRandomPitch" id=12]
audio_stream = ExtResource( 9 )
random_pitch = 1.02

[node name="Player" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 2 )
small_hit_sfx = ExtResource( 6 )
medium_hit_sfx = ExtResource( 5 )
big_hit_sfx = ExtResource( 7 )

[node name="EnvCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 10

[node name="Hat" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -14 )
hframes = 6

[node name="Animator" type="AnimationPlayer" parent="."]
anims/Dash = SubResource( 10 )
anims/Death = SubResource( 8 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 11 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -8 )
shape = SubResource( 5 )

[node name="PickupBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupBox"]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 6 )

[node name="HitSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 7 )
volume_db = -12.0
bus = "SFX"

[node name="BuildRange" type="Node2D" parent="."]
position = Vector2( 0, -8 )
z_index = 20
script = ExtResource( 8 )

[node name="StepSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource( 12 )
volume_db = -26.0
bus = "SFX"

[connection signal="animation_finished" from="Animator" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="PickupBox" to="." method="_on_PickupBox_area_entered"]
